clusters/milkyway/infra/cockroachdb/ingress.yaml
---
# Source: cockroachdb/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cockroachdb-ingress
  namespace: cockroachdb
spec:
  rules:
  - host: cockroachdb-console.milkyway.cboxlab.com
    http:
      paths:
      - backend:
          service:
            name: cockroachdb-public
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - cockroachdb-milkyway.cosmos.cboxlab.com
    secretName: cockroachdb-tls
